resources/mediawiki.custom.less
/* ... */
.mw-ui-checkbox:not(#noop) input[type="checkbox"]:checked + label::before {
	background-position: center 30%;
}

/* Fixes the create account/log-in pages not stretching the background properly. */
.mw-ui-container #userloginForm {
	float: none;
	display: inline-block;
	vertical-align: top;
}

div.mw-createacct-benefits-container {
	float: none;
	display: inline-block;
}

/* Lazy subcategories hack for Categories page */
div#mw-subcategories > div.mw-content-ltr {
	min-height: 0 !important;
}

// Improved vertical spacing for Recent Changes page.
.mw-changeslist {
  line-height: 1.8;
}

// Align icons with text on Recent changes page.
table.mw-enhanced-rc td {
  vertical-align: middle;
}


/* ==============================================
		WikiEditor
	 ============================================== */

/* Forces the wikiEditor icons to work even with the "box-sizing: border-box" declaration, which messes with the way padding works. */
a.wikiEditor-toolbar-spritedButton {
	width: 24px;
	height: 24px;
}


/* ==============================================
		User message dialog
	 ============================================== */

.user-message {
	position: absolute;
	background-color: #ffb03b;
	box-shadow: 0 1px 6px 0 rgba(0,0,0,0.4);
	width: 300px;
	font-size: 1.4rem;
	padding: 12px;
	top: 70px;
	right: 18px;
	z-index: 1;
	color: #fff;

	a {
		color: #fff;
	}
}

dl {
	@media all and (max-width: 800px) {
		margin-left: -1em;	
	}
}


/* ==============================================
		References
	 ============================================== */

// Fixes references sometimes causing horizontal scrolling on mobile devices.
ol.references {
	overflow-x: hidden;
	margin-left: 0;
  padding-left: 45px;

	li {
		margin: 5px 0;
		list-style-type: decimal;
	}

  .mw-cite-backlink {
	  position: relative;
	}
}


/* ==============================================
		Category pages
	 ============================================== */

// Wrapper for category pages.
.mw-category {
	ul {
		list-style: none;
		margin: 0;

		li {
			// Vertical spacing
			margin: 12px 0;
		}
	}

	// Only provide extra margin on mobile.
	@media all and (max-width: 800px) {
		margin-left: 5px;
	}
}



/* ==============================================
		MediaWiki Header
	 ============================================== */

#mw-head {
	width: 100%;
	position: relative;
	top: 0;
	left: 0;
	padding: 10px;
	height: 40px;
	margin-bottom: 10px;

	ul {
		list-style: none;
		font-size: 1.4rem;
		padding: 0;
		margin: 0;

		li {
			display: inline-block;
			vertical-align: top;

			a {
				text-decoration: none;

				&:visited {
					color: #0645ad;
				}
			}

			/* Makes the currently selected mw-head item bold. */
			&.selected {
				font-weight: 600;
			}
		}
	}
}

#mw-head-left {
	position: absolute;
	left: 0;

	> li {
		margin-right: 20px;
	}
}

// Talk page link in mw-head.
#ca-talk.new a,
#ca-talk.new a:visited,
#ca-nstab-main.new a,
#ca-nstab-main.new a:visited {
	color: #ba0000 !important;
}

#mw-head-right {
	position: absolute;
	right: 0;
	list-style: none;

	ul {
		padding: 0;
	}

	li {
		margin-top: 0;
		display: inline-block;
		margin-left: 20px;
	}

	#mw-head-more {
		background-color: #fff;
		border-radius: 3px;
		display: inline-block;
		vertical-align: top;
		margin-top: -5px;
		min-width: 100px;
		position: relative;
		z-index: 1;

		&:focus {
			outline: transparent;
		}
	}

	#mw-head-more > div {
		padding: 0 2px;
		border: 1px solid #ccc;
		border-radius: 3px;

		background: right 10px top 8px no-repeat;
		background-size: auto 12px;
		.background-image("images/carat2.svg");

		.transition(background-color 200ms 100ms, border-color 200ms 100ms;);

		&:hover {
			.background-image("images/caratHover.svg");
			border-color: #aaa;
			background-color: #fff;
		}

		> a {
			height: 30px;
		}

		ul {
			/* Can't use display: none because it's not animatable */
			max-height: 0;
			opacity: 0;
			overflow: hidden;
			list-style: none;
			display: block;
			border-top: 1px solid #ededed;

			.transition(max-height 0s 100ms, opacity 200ms 100ms;);
		}

		&:hover ul {
			max-height: 9999px;
			opacity: 1;
		}

		a {
			display: block;
			padding: 4px 6px;
			border-radius: 2px;
			color: #000;
			text-decoration: none;
		}

		li {
			float: none;
			font-size: 1.4rem;
			margin: 0;
			padding: 0;
			background: none;
			display: block;

			a {
				margin: 2px 0;
			}

			a:hover {
				background-color: @pcgw-selected-color;
				color: #fff;
			}
		}
	}
}

/* Mobile styles */
@media all and (max-width: 800px) {
	/* Hide all of mw-head-right except for the watch star. */
	#mw-head-right {
		#ca-view,
		#ca-edit,
		#ca-history,
		#ca-viewsource,
		#mw-head-more {
			display: none;
		}
	}

	/* Hide section edit links on mobile. */
	.mw-editsection {
		display: none;
	}
}

